deployments/k8s/cloud/modules/additional/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: balancer
spec:
  type: LoadBalancer
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
