deployments/k8s/cloud/modules/additional/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheesecake-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /product/*
            pathType: Prefix
            backend:
              service:
                name: product-service-svc
                port:
                  number: 8082
